# stateio

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/core/: game.c  game.h  log.h  video.c  video.h
src/core/elems/: area.c  area.h  map.c  map.h  player.c  player.h  potion.c  potion.h  troop.c  troop.h
